add change listener to rainbow tags checkbox

--- a/client/index.html
+++ b/client/index.html
@@ -296,6 +296,7 @@
 	</script>
 	<script>
 		const checkbox = document.getElementById('darkChat');
+		const rainbowTag = document.getElementById("rainbowTag");
 		const chatbox = document.getElementById('chatbox');
 		let darkMode = localStorage.getItem('darkMode') === 'true';
 		checkbox.checked = darkMode;
@@ -330,6 +331,10 @@
 			darkMode = checkbox.checked;
 			localStorage.setItem('darkMode', darkMode);
 			updateChatbox();
+		});
+
+		rainbowTag.addEventListener('change', () => {
+			chatbox.classList[rainbowTag.checked ? "add" : "remove"]("animatedTags");
 		});
 
 		const observer = new MutationObserver(mutations => {
