more w functions + css style updates + localStorage fixes + regex fixes in msg

--- a/client/index.html
+++ b/client/index.html
@@ -103,7 +103,7 @@
 
 			<input type="checkbox" id="fps">
 			<label for="showFPS">Show FPS</label><br>
-			
+
 			<input type="checkbox" id="showFeedback">
 			<label for="showFeedback">Show typing feedback</label><br><br>
 			<button id="clearChat">
@@ -210,7 +210,7 @@
 					</form>
 					<div id="memberlist"></div>
 				</div>
-				<input id="deletewall" type="button" value="Delete wall (DANGEROUS!)">
+				<button class="alert" id="deletewall">Delete wall (DANGEROUS!)</button>
 			</div>
 			<div id="admin">
 				<h3>Admin</h3>
@@ -428,6 +428,26 @@
 
 		updateFeedback();
 		feedback.onclick = updateFeedback;
+	</script>
+	<script>
+		const defaults = { darkMode: false, anonIdShow: true, rainbowTags: true, showFps: false, showFeedback: true };
+		for (const k in defaults) {
+			if (localStorage.getItem(k) === null) {
+				localStorage.setItem(k, JSON.stringify(defaults[k]));
+			};
+		}
+	</script>
+	<script>
+		const anonId = document.getElementById("anonIdShow");
+
+		anonId.checked = localStorage.getItem("anonIdShow") === "true";
+
+		function updateAnonId() {
+			localStorage.setItem("anonIdShow", anonId.checked);
+		}
+
+		updateAnonId();
+		anonId.onclick = updateAnonId;
 	</script>
 </body>
 
