--- a/client/index.html
+++ b/client/index.html
@@ -112,6 +112,11 @@
 			<br />
 			<br />
 			<label for="zoom">Zoom: </label><input type="range" min="5" max="30" value="10" id="zoom"><br><br>
+			<div>
+				<span style="color: #ffff00"> WARNING: </span>
+				<span> Some of the fonts are low quality!</span>
+			</div>
+			<br>
 			<label for="fontselect">Font: </label><select id="fontselect"></select><br>
 			<fieldset id="fontmenu" class="hidden">
 				<legend>Custom Font</legend>
