color to colour

--- a/client/index.html
+++ b/client/index.html
@@ -205,7 +205,7 @@
 				<input id="private" type="checkbox"><label for="private">Private</label><br>
 				<input id="hidecursors" type="checkbox"><label for="hidecursors">Hide cursors</label><br>
 				<input id="disablechat" type="checkbox"><label for="disablechat">Disable chat</label><br>
-				<input id="walldisablecolour" type="checkbox"><label for="walldisablecolour">Disable colour</label><br>
+				<input id="walldisablecolour" type="checkbox"><label for="walldisablecolour">Disable color</label><br>
 				<input id="disablebraille" type="checkbox"><label for="disablebraille">Disable braille</label><br>
 				<div id="addmembers">
 					<h3>Add members</h3>
